--- a/.prettierrc
+++ b/.prettierrc
@@ -3,8 +3,8 @@
   "jsxSingleQuote": true,
   "semi": false,
   "tabWidth": 2,
-  "bracketSpacing": true,
-  "jsxBracketSameLine": false,
+  "bracketSpacing": false,
+  "jsxBracketSameLine": true,
   "arrowParens": "always",
   "trailingComma": "none"
 }
